syntax = "proto3";

package monad_proto.basic;

message ProtoPubkey {
  bytes pubkey = 1;
}

message ProtoNodeId {
  ProtoPubkey pubkey = 1;
}

message ProtoRound {
  uint64 round = 1;
}

message ProtoSeqNum {
  uint64 seq_num = 1;
}

message ProtoHash {
  bytes hash = 1;
}

message ProtoBlockId  {
  ProtoHash bid = 1;
}

message ProtoEpoch {
  uint64 epoch = 1;
}

message ProtoStake {
  int64 stake = 1;
}

message ProtoGas {
  uint64 gas = 1;
}

message ProtoBloom {
  bytes bloom = 1;
}

message ProtoBlockBodyId {
  ProtoHash pid = 1;
}

message ProtoMonadVersion {
  uint32 protocol_version = 1;
  uint32 client_version_maj = 2;
  uint32 client_version_min = 3;
  uint32 hash_version = 4;
  uint32 serialize_version = 5;
}
