syntax = "proto3";

package monad_proto.execution;

message ProtoExecutionResult {
  bytes result = 1;
}

message ProtoExecutionInput {
  bytes input = 1;
}